more wordsmithing, tweaks

--- a/me.html
+++ b/me.html
@@ -151,7 +151,7 @@
            Some in software, some not.</p>
         <p>It's what I love to do.</p>
       </div>
-      <div class="graphic">
+      <div class="graphic" style="padding-top: 2pt;">
         <img src="./images/me-portrait-small.jpeg" class="bordered" width="196" height="196" />
       </div>
     </div>
@@ -163,7 +163,8 @@
       <div class="text" style="padding-top: 20pt;">
         <h2>I helped make Ruby on Rails.</h2>
         <p>I was a member of the <a href="http://rubyonrails.org/core/alumni/">core team</a><br />
-          from <a href="https://github.com/rails/rails/commits?author=jamis">2005&ndash;2007</a>.</p>
+          from 2005&ndash;2007.</p>
+        <p>I worked on <a href="https://github.com/rails/rails/commits?author=jamis">lots of things</a>.</p>
       </div>
     </div>
 
@@ -214,8 +215,8 @@
         I've spent thousands more hours<br />
         tinkering on side-projects ranging from<br />
         <a href="https://github.com/jamis/kaleidoscope">uniform tilings</a>,<br />
-        <a href="https://github.com/jamis/theseus">random mazes</a>, and<br />
-        <a href="https://github.com/jamis/celtic_knot">celtic knots</a>,<br />
+        <a href="https://github.com/jamis/theseus">random mazes</a>,<br />
+        and <a href="https://github.com/jamis/celtic_knot">celtic knots</a>,<br />
         to<br />
         <a href="https://github.com/jamis/bucketwise">personal finance</a>,<br />
         <a href="https://github.com/jamis/piece-by-piece">genealogy</a>, and<br />
