--- a/me.html
+++ b/me.html
@@ -3,7 +3,7 @@
 <head>
   <title>Jamis Buck</title>
   <meta charset="UTF-8" />
-  <link href='http://fonts.googleapis.com/css?family=Cabin:400,700' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Cabin:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
   <style type="text/css">
     html, body {
       margin: 0;
@@ -213,7 +213,7 @@
 
       <p>Aside from those,<br />
         I've spent thousands more hours<br />
-        tinkering on side-projects ranging from<br />
+        tinkering on side projects ranging from<br />
         <a href="https://github.com/jamis/kaleidoscope">uniform tilings</a>,<br />
         <a href="https://github.com/jamis/theseus">random mazes</a>,<br />
         and <a href="https://github.com/jamis/celtic_knot">celtic knots</a>,<br />
@@ -224,13 +224,13 @@
 
       <p>I've experimented with grammars, parsers, interpreters, and compilers. I've written and played with ray-tracers and random generators. Syntax highlighters, document readers, logic puzzles, databases, web servers, layout engines&mdash;I've been up to my elbows in all of them.</p>
 
-      <p>Every “side-project” I've done was because I was curious
+      <p>Every side project I've done was because I was curious
         about how something worked.</p>
 
       <p>I wanted to explore it.</p>
       
       <h2 class="callout">I wanted to<br />
-        <u>understand</u> it.</h2>
+        <em>understand</em> it.</h2>
     </div>
 
     <h1 class="callout">So, I learn things.</h1>
@@ -251,7 +251,9 @@
         chain mail juggling balls,<br />
         <a href="http://twitpic.com/2vpxxj">kimchi</a> and <a href="https://twitter.com/jamis/status/125708128296771584">homemade marshmallows</a>.</p>
 
-      <p>I've read calculus texts because I wanted to, and books about Middle English because they sounded interesting.</p>
+      <p>I've read calculus texts <em>because I wanted to</em>,<br />
+        and books about Middle English<br />
+        <em>because they sounded interesting</em>.</p>
 
       <p>I researched and learned how to generate <a href="http://weblog.jamisbuck.org/2011/2/7/maze-generation-algorithm-recap">random mazes</a>, I learned to play the guitar, and I'm on my way to learning the mandolin and ukulele.</p>
 
