--- a/_posts/2011-01-17-maze-generation-aldous-broder-algorithm.html
+++ b/_posts/2011-01-17-maze-generation-aldous-broder-algorithm.html
@@ -12,6 +12,8 @@ summary: >
   for randomly generating them is given.
 ---
 
+{% include maze_book.html %}
+
 <p>The next maze algorithm I’m going to cover, the Aldous-Broder algorithm, is one of the simplest imaginable. It’s also one of the least efficient. In fact, it is so inefficient that you might wonder why anyone would even bother implementing it, let alone discovering it and having their name attached to it.</p>
 <p>D. Aldous and A. Broder were two researchers, working independently, who were investigating <em>uniform spanning trees</em>. A spanning tree, as you may or may not already know, is any tree that connects all the vertexes in a graph. A <em>uniform</em> spanning tree is one chosen randomly (and with equal probability) among all the possible spanning trees of a given graph.</p>
 <p>Riveting, isn’t it?</p>
