--- a/_posts/2011-02-03-maze-generation-sidewinder-algorithm.html
+++ b/_posts/2011-02-03-maze-generation-sidewinder-algorithm.html
@@ -12,6 +12,8 @@ summary: >
   and animated. An implementation in Ruby is given
 ---
 
+{% include maze_book.html %}
+
 <p>Last of the (eleven!) maze algorithms on my list is the Sidewinder algorithm. With a name like that, it’s got to be cool, right?</p>
 <p>Well, possibly. It’s got its problems, but it’s quick and easy to implement, and allows arbitrarily tall mazes. It’s closely related to the <a href="http://weblog.jamisbuck.org/2011/2/1/maze-generation-binary-tree-algorithm">Binary Tree algorithm</a>, but manages to get away with only one side being spanned by a passage, instead of two.</p>
 <p>In a nutshell, it goes like this:</p>
