--- a/_posts/2011-03-04-maze-generation-weave-mazes.html
+++ b/_posts/2011-03-04-maze-generation-weave-mazes.html
@@ -12,6 +12,8 @@ summary: >
   passages weave over and under one another
 ---
 
+{% include maze_book.html %}
+
 <p>This is a “weave” maze:</p>
 <div style="text-align: center"><img src="http://jamisbuck.org/images/maze7.png" width="204" height="204" alt="weave maze" style="background-color: #ddd;"></div>
 <p>The name does not describe any specific algorithm for generating mazes, but rather simply identifies the class of maze, where some passages weave over or under other passages. It’s a type of 3D maze but it can be rendered nicely in 2D, as long as you conform to the following rules:</p>
