--- a/_posts/2011-01-10-maze-generation-prim-s-algorithm.html
+++ b/_posts/2011-01-10-maze-generation-prim-s-algorithm.html
@@ -12,6 +12,8 @@ summary: >
   algorithm
 ---
 
+{% include maze_book.html %}
+
 <p>My last post was about using <a href="http://weblog.jamisbuck.org/2011/1/3/maze-generation-kruskal-s-algorithm">Kruskal’s algorithm to generate random mazes</a>. This article is about using another minimal spanning tree algorithm to do the same: <a href="http://en.wikipedia.org/wiki/Prim's_algorithm">Prim’s algorithm</a>.</p>
 <p>If you recall, the random variant of Kruskal’s algorithm worked by randomly selecting edges from the graph, and adding them to the maze if they connected disjoint trees. Visually, this had the effect of growing the maze from many random points across the grid.</p>
 <p>Prim’s approaches the problem from a different angle. Rather than working edgewise across the entire graph, it starts at one point, and grows outward from that point. The standard version of the algorithm works something like this:</p>
