"Task Tracking for Neurochemical Brains"

--- a/index.html
+++ b/index.html
@@ -36,3 +36,16 @@ layout: default
     <h3>Dating to 2004 &mdash; Hundreds more articles</h3>
   </div>
 </div>
+
+<script type="text/javascript">
+    /* * * CONFIGURATION VARIABLES * * */
+    var disqus_shortname = 'jamisbuck';
+    
+    /* * * DON'T EDIT BELOW THIS LINE * * */
+    (function () {
+        var s = document.createElement('script'); s.async = true;
+        s.type = 'text/javascript';
+        s.src = '//' + disqus_shortname + '.disqus.com/count.js';
+        (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+    }());
+</script>
