--- a/me.html
+++ b/me.html
@@ -257,7 +257,8 @@
 
       <p>I researched and learned how to generate <a href="http://weblog.jamisbuck.org/2011/2/7/maze-generation-algorithm-recap">random mazes</a>, I learned to play the guitar, and I'm on my way to learning the mandolin and ukulele.</p>
 
-      <p>Oh, and I'm currently writing a book<br />about maze algorithms.</p>
+      <p>Oh, and I wrote<br />
+        <a href="https://pragprog.com/book/jbmaze/mazes-for-programmers">a book about maze algorithms</a>.</p>
 
       <h2 class="callout">Because<br />I love to learn.</h2>
 
@@ -275,16 +276,16 @@
 
       <h2 class="callout">Give me a try.</h2>
 
-      <p>Part-time, full-time, or contract, let's talk<br />
-        and see if we can make something work.</p>
+      <p>No job is too small.<br />
+        Let's talk.</p>
 
       <p>
         Send a note to <a href="mailto:jamis@jamisbuck.org">jamis@jamisbuck.org</a>,<br />
         and we'll get the ball rolling.
       </p>
 
-      <p class="caveats">Remote offers only, please.<br />
-        Relocation is not currently an option.</p>
+      <p class="caveats">Contract-only at the moment.<br />
+        Remote offers only, please.</p>
     </div>
 
     <div class="footer">
