--- a/show-me-your-code.html
+++ b/show-me-your-code.html
@@ -222,14 +222,14 @@
         </ul>
         <p class="spaceb-n">This is an opportunity to learn and improve.<p>
         <h2>Every mistake is a chance to do better.</h2>
-        <p>Sometimes we all just need
+        <p>Sometimes all we need is
            a bit of help recognizing the lesson.</p>
       </div>
     </div>
 
     <div class="bundle">
       <div class="text">
-        <h2>How this usually works:</h2>
+        <h2>How it works:</h2>
 
         <ol>
           <li>We shake hands and swap contracts, NDA's, and so forth.</li>
