--- a/show-me-your-code.html
+++ b/show-me-your-code.html
@@ -251,8 +251,7 @@
         <h2>I promise to be:</h2>
         <ul>
           <li><strong class="promise">Kind.</strong><br />
-              I won't judge. I won't accuse.
-              I won't laugh. (Unless you laugh first!)</li>
+              I won't judge. I won't accuse. I won't laugh.</li>
           <li>
               <img src="images/show-me-your-code/solved-02.png" width="200" height="150" class="jaunt left" />
               <strong class="promise">Encouraging.</strong><br />
